Prevent user names from overlapping with each other

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ body {
     font-family: "Roboto", sans-serif;
 
     padding: .5rem;
-    /* margin-left: 1rem; */
+    margin-left: 1rem;
     margin-bottom: .5rem;
 
     border: 5px solid #eeeeee;
